--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body bgcolor="orange" text="black">  Bienvenido <br><br><br>En esta pagina web vamos a abordar el tema de la contaminacion del suelo ya que es un problema muy comun en todo el mundo y oe en peligrolos ecosistemas y nuestra salud. Hablaremos sobre los diferentes tipos de contaminacion del suelo que existen,las causas que provocan este problema,las consecuensias y los metodos de prevencion a este problema para poder tener mas limpio el planeta.
 <br>
 <br>
-<A HREF="CONTAMINACION DEL SUELO 2.html"> iR A SIGUIENTE PAGINA
+<A HREF="Contaminacion del suelo 2.html"> iR A SIGUIENTE PAGINA
 </a><br>
 <A HREF="PORTADA DEL TRABAJO.PDF"> IR A ARCHIVO 
 </A>
