Update Contaminacion del suelo 2.html

--- a/Contaminacion del suelo 2.html
+++ b/Contaminacion del suelo 2.html
@@ -1,7 +1,7 @@
 <html>
 <head> <br><br><br><br><i><marquee behavior= "alternate" direction></marquee><marquee scrolldalay="60"></marquee>
 <marquee direction="left"behavior="alternate"> <big><big>
- ¿Que es la contaminacion del suelo? </marquee>
+ Â¿Que es la contaminacion del suelo? </marquee>
 <marquee fontface="arial" size="10"></marquee>
 <hr>
 <hr>
@@ -9,10 +9,10 @@
 </head>
 <body bgcolor="orange" text="black"> Definicion <br><br><br>Es una alteracion del suelo por la precensia de sutancias quimicas producidas por el hombre en otras palabras es la degredacion o destruccion de la superficie y del suelo de la tierra como resultado de la accion directa o indirecta de los seres humanos.
 <br><br>
-<a href="contaminacion del suelo 3.html"> ir a siguiente pagina
+<a href="Contaminacion del suelo 3.html"> ir a siguiente pagina
 </a>
 <br>
-<a href="que es la contaminación del suelo.pdf"> ir a archivo
+<a href="que es la contaminaciÃ³n del suelo.pdf"> ir a archivo
 </a>
 </body>
 </html>
