Update Contaminacion del suelo 3.html

--- a/Contaminacion del suelo 3.html
+++ b/Contaminacion del suelo 3.html
@@ -5,17 +5,17 @@
 <marquee fontface="arial" size="10"></marquee>
 <hr>
 <hr>
-<title> "La contaminaci髇 del suelo" </title>
+<title> "La contaminaci贸n del suelo" </title>
 </head>
-<body bgcolor="orange" text="black"> Tipos <br><br><br> 1.Contaminaci髇 natural o end骻ena <br>
-2.Contaminaci髇 antr髉ica o ex骻ena <br>
-3.Contaminaci髇 por sustancias quimicas<br>
-4.Contaminaci髇 por infiltraci髇<br>
-5.Contaminaci髇 por eliminaci髇 de residuos<br>
-6.Contaminaci髇 por superficies de escorrent韆<br>
-7.Contaminaci髇 por instalaciones superficiales<br>
+<body bgcolor="orange" text="black"> Tipos <br><br><br> 1.Contaminaci贸n natural o end贸gena <br>
+2.Contaminaci贸n antr贸pica o ex贸gena <br>
+3.Contaminaci贸n por sustancias quimicas<br>
+4.Contaminaci贸n por infiltraci贸n<br>
+5.Contaminaci贸n por eliminaci贸n de residuos<br>
+6.Contaminaci贸n por superficies de escorrent铆a<br>
+7.Contaminaci贸n por instalaciones superficiales<br>
 <br><br>
-<a href="contaminacion del suelo 4.html"> ir a siguiente pagina
+<a href="Contaminacion del suelo 4.html"> ir a siguiente pagina
 </a><br>
 <a href="tipos de contaminacion del suelo.jpg"> ir a imagen
 </a><br>
