Update Contaminacion del suelo 6.html

--- a/Contaminacion del suelo 6.html
+++ b/Contaminacion del suelo 6.html
@@ -1,24 +1,24 @@
 <html>
 <head> <br><br><br><br><i><marquee behavior= "alternate" direction></marquee><marquee width="80%"></marquee>
 <marquee direction="left"behavior="alternate"> <big><big>
- Consecuencias de la contaminación del suelo </marquee>
+ Consecuencias de la contaminaciÃ³n del suelo </marquee>
 <marquee scrollamount="40"></marquee>
 <hr>
 <hr>
 <title> "la contaminacion del suelo" </title>
 </head>
-<body bgcolor="orange" text="browm"> Definicion <br><br><br> La pérdida de calidad del terreno suponeuna serie de cosecuencias negativasque van desde sudesvalorización hasta la imposibilidad de uso para construir, cultivar o, simple y llanamente, para albergar un ecosistema sano.
+<body bgcolor="orange" text="browm"> Definicion <br><br><br> La pÃ©rdida de calidad del terreno suponeuna serie de cosecuencias negativasque van desde sudesvalorizaciÃ³n hasta la imposibilidad de uso para construir, cultivar o, simple y llanamente, para albergar un ecosistema sano.
 Las consecuencias pueden sufrirse  de forma silenciosa, provocando un constante goteo de victimas, ya sea humanas o de especies animales y vegetale, como manifiesta. 
 <br><br>
 Asi puea, entre las consecuencias de la contaminacion del suelo encontramos:<br>
-a) Pérdida de la flora y su variedad.<br>
+a) PÃ©rdida de la flora y su variedad.<br>
 b) Dificultades para la agricultura y el conreo.<br>
-c) Contaminación y pérdida de la fauna.<br>
+c) ContaminaciÃ³n y pÃ©rdida de la fauna.<br>
 d) Deterioro del paisaje.<br>
 e) Empobrecimiento global del ecosistema, ya sea marino o terrestre. 
 
 <br><br>
-<a href="contaminacion del suelo 7.html"> ir a siguiente pagina
+<a href="Contaminacion del suelo 7.html"> ir a siguiente pagina
 </a><br>  
 </body>
 </html>
