Update Contaminacion del suelo 7.html

--- a/Contaminacion del suelo 7.html
+++ b/Contaminacion del suelo 7.html
@@ -1,24 +1,24 @@
 <html>
 <head> <br><br><br><br><i><marquee behavior= "alternate" direction></marquee>
 <marquee direction="right"behavior="alternate"> <big><big>
- Metodos de prevenci髇 de la contaminaci髇 del suelo </marquee>
+ Metodos de prevenci贸n de la contaminaci贸n del suelo </marquee>
 <marquee scrollamount="40"></marquee>
 <hr>
 <hr>
 <title> "la contaminacion del suelo" </title>
 </head>
-<body bgcolor="orange" text="white"> Definicion <br><br><br> La prevencion es la mejor solcion, de eso no cabe duda, pero tambien es cirto que no siempre se puede evitar este tipo de contaminaci髇. En ocasiones se producen accidentes o lo ocasiona la lluvia acida, con lo que es dicilmente controlabl, cuando no imposible. Seria necesario un dr醩tico cambio del modelo productivo o una prohibicion de determinadas practicas como la extracci髇 minera, la actividad industrial que produce desechos toxicos o, por ejemplo, el uso de fertiizantes y abonos artificiales.
-Como buenas pr醕ticas, un adecuado reciclaje de basuras y depuracion de desechos, la promocion de las energias renovables y desechos a nivel industrial y dom閟ticos o el fomento de la agricultura ecol骻ica ayudaria a mantener los suelos libres de poluci髇. Mantener las redes de alcantarillado en buen estado y mejoar la depuracion de las aguas grises o residuales, asi como el tratamiento de los vertidos industriales que se devuelven en lanaturaleza.
+<body bgcolor="orange" text="white"> Definicion <br><br><br> La prevencion es la mejor solcion, de eso no cabe duda, pero tambien es cirto que no siempre se puede evitar este tipo de contaminaci贸n. En ocasiones se producen accidentes o lo ocasiona la lluvia acida, con lo que es dicilmente controlabl, cuando no imposible. Seria necesario un dr谩stico cambio del modelo productivo o una prohibicion de determinadas practicas como la extracci贸n minera, la actividad industrial que produce desechos toxicos o, por ejemplo, el uso de fertiizantes y abonos artificiales.
+Como buenas pr谩cticas, un adecuado reciclaje de basuras y depuracion de desechos, la promocion de las energias renovables y desechos a nivel industrial y dom茅sticos o el fomento de la agricultura ecol贸gica ayudaria a mantener los suelos libres de poluci贸n. Mantener las redes de alcantarillado en buen estado y mejoar la depuracion de las aguas grises o residuales, asi como el tratamiento de los vertidos industriales que se devuelven en lanaturaleza.
 <br><br>
-a) La prevenci髇 y concienciaci髇<br>
-b) La prohibici髇 de pr醕ticas da駃nas <br>
+a) La prevenci贸n y concienciaci贸n<br>
+b) La prohibici贸n de pr谩cticas da帽inas <br>
 c) Mejora en los procesos de reciclaje<br>
 d) Mejora en los procesos de depuracion de aguas<br>
 e) Uso de energias renovables <br>
 f) Renovar el alcantarilado 
 <br>
 <br><br>
-<a href="contaminacion del suelo 8.html"> ir a siguiente pagina
+<a href="Contaminacion del suelo 8.html"> ir a siguiente pagina
 </a><br>  
 </body>
 </html>
