Update Contaminacion del suelo 8.html

--- a/Contaminacion del suelo 8.html
+++ b/Contaminacion del suelo 8.html
@@ -10,7 +10,7 @@
 <body bgcolor="orange" text="black">  <br><br><br>1.
 <br>Aqui hemos concluido con este tema de la contaminacion del suelo, pues esto es un gran problema muy comun en todo el mundo. Nosotros los humanos somos los que contaminamos esa naturaleza y pues necesitamos cuidarlo, no tiraremos basura, no quemarla, reduciremos el uso de fertilizantes. Para terminar necesito que nos ayuden a comunicar o decir a las personas que cuiden el suelo y los demas ambientes naturales que no rodea.
 <br><br>
-<a href="Contaminacion del suelo 1.html"> ir a pagina inicio
+<a href="index.html"> ir a pagina inicio
 </a><br>  
 </body>
 </html>
