--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <br>
 <A HREF="Contaminacion del suelo 2.html"> iR A SIGUIENTE PAGINA
 </a><br>
-<A HREF="PORTADA DEL TRABAJO.PDF"> IR A ARCHIVO 
+<A HREF="PORTADA DEL TRABAJO.pdf"> IR A ARCHIVO 
 </A>
 <br>
 <table border="0" width="80%">
