Update Contaminacion del suelo 2.html

--- a/Contaminacion del suelo 2.html
+++ b/Contaminacion del suelo 2.html
@@ -12,7 +12,7 @@
 <a href="Contaminacion del suelo 3.html"> ir a siguiente pagina
 </a>
 <br>
-<a href="que es la contaminación del suelo.pdf"> ir a archivo
+<a href="Que es la contaminación del suelo.pdf"> ir a archivo
 </a>
 </body>
 </html>
