Update Contaminacion del suelo 3.html

--- a/Contaminacion del suelo 3.html
+++ b/Contaminacion del suelo 3.html
@@ -17,9 +17,9 @@
 <br><br>
 <a href="Contaminacion del suelo 4.html"> ir a siguiente pagina
 </a><br>
-<a href="tipos de contaminacion del suelo.jpg"> ir a imagen
+<a href="Tipos de contaminacion del suelo.jpg"> ir a imagen
 </a><br>
-<a href="tipos de contaminacion.jpg"> ir a imagen
+<a href="Tipos de contaminacion.jpg"> ir a imagen
 </a>
 </body>
 </html>
